logs/mobility/build.make.058.log.stderr
In file included from /home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:1:0:
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:26: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::FIXING_CAMERA’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                          ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:46: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::APPROACHING_CUBE’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                              ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:65: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::PICKING_UP_CUBE’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                                                 ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:84: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::VERIFYING_PICKUP’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                                                                    ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:108: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::PICKUP_FAILED_BACK_UP’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                                                                                            ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:123: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::DONE_FAILING’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                                                                                                           ^
In file included from /home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:1:0:
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:138: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::DONE_SUCCESS’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                                                                                                                          ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:34:13: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 int state = FIXING_CAMERA;
             ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp: In member function ‘PickUpResult PickUpController::pickUpSelectedTarget(bool)’:
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:86:7: error: ‘PickUpController::FIXING_CAMERA’ cannot appear in a constant-expression
 case (FIXING_CAMERA):
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:98:7: error: ‘PickUpController::APPROACHING_CUBE’ cannot appear in a constant-expression
 case (APPROACHING_CUBE):
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:115:7: error: ‘PickUpController::PICKING_UP_CUBE’ cannot appear in a constant-expression
 case (PICKING_UP_CUBE):
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:125:36: error: expected ‘;’ before ‘::’ token
 omniTimerStartingTime = ros::Time()::now();//reset the timer again
                                    ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:130:7: error: ‘PickUpController::VERIFYING_PICKUP’ cannot appear in a constant-expression
 case (VERIFYING_PICKUP):
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:142:36: error: expected ‘;’ before ‘::’ token
 omniTimerStartingTime = ros::Time()::now();//reset the timer again
                                    ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:148:6: error: ‘PickUpController::PICKUP_FAILED_BACK_UP’ cannot appear in a constant-expression
 case(PICKUP_FAILED_BACK_UP):
      ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:167:7: error: ‘PickUpController::DONE_FAILING’ cannot appear in a constant-expression
 case (DONE_FAILING):
       ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.cpp:172:7: error: ‘PickUpController::DONE_SUCCESS’ cannot appear in a constant-expression
 case (DONE_SUCCESS):
       ^
make[2]: *** [CMakeFiles/mobility.dir/src/PickUpController.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:22:0:
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:26: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::FIXING_CAMERA’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                          ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:46: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::APPROACHING_CUBE’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                              ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:65: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::PICKING_UP_CUBE’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                                                 ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:84: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::VERIFYING_PICKUP’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                                                                    ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:108: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::PICKUP_FAILED_BACK_UP’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                                                                                            ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:123: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::DONE_FAILING’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                                                                                                           ^
In file included from /home/steven/rover_workspace/src/mobility/src/mobility.cpp:22:0:
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:33:138: error: ISO C++ forbids in-class initialization of non-const static member ‘PickUpController::DONE_SUCCESS’
 static int FIXING_CAMERA=0, APPROACHING_CUBE=1, PICKING_UP_CUBE=2,VERIFYING_PICKUP=3,PICKUP_FAILED_BACK_UP=4,DONE_FAILING=5,DONE_SUCCESS=6;
                                                                                                                                          ^
/home/steven/rover_workspace/src/mobility/src/PickUpController.h:34:13: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
 int state = FIXING_CAMERA;
             ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
